[package]
name = "tun-tap"
# Also don't forget to update the version in the html_root_url attribute in src/lib.rs
version = "0.1.2"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "TUN/TAP interface wrapper"
documentation = "https://docs.rs/tun-tap"
repository = "https://github.com/vorner/tuntap"
readme = "README.md"
keywords = ["tun", "tap", "network"]
categories = ["network-programming"]
license = "Apache-2.0/MIT"

[build-dependencies]
cc = "~1"

[dependencies]
libc = { version = "~0.2", optional = true }


[dev-dependencies]
version-sync = "~0.9.4"
etherparse = "~0.10.1"
serial_test = "~0.8.0"
